# ai_web

./: .gitignore  CONTRIBUTING.md  ENVIRONMENT_VARIABLES.md  README.md  example.env  pyproject.toml
src/: main.py
src/api/: __init__.py  sites.py  users.py
src/core/: config.py  settings.py
src/core/common/: __init__.py  date_type.py
src/core/schema/: __init__.py  site.py  user.py
src/frontend_api/: __init__.py  app.py
src/frontend_api/sites/: __init__.py  mocks.py  routers.py
src/frontend_api/users/: __init__.py  mocks.py  routers.py
