[project]
name = "ai-web"
version = "0.1.0"
description = "FastAI for Web"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiofiles>=25.1.0",
    "editorconfig-checker==3.2.1",
    "fastapi[standard]==0.115.12",
    "html-page-generator",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.12.0",
    "ruff==0.11.13",
]

[tool.uv.sources]
html-page-generator = { git = "https://github.com/devmanorg/html-page-generator.git" }
